# x11demotool

./: .augment-guidelines  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
memory_bank/: ARCHITECTURE.md  project_brief.md
tests/: __init__.py
x11_input_monitor/: __init__.py  __main__.py  cli.py  monitor.py
